tkg_tmc_to/cluster-4-vendor-vanilla/06-httpbin.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tanzu-sample-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: httpbin
  name: httpbin
  namespace: tanzu-sample-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
        - image: yogendra/httpbin
          name: httpbin
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpbin
  name: httpbin
  namespace: tanzu-sample-app
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: httpbin
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: httpbin
  namespace: tanzu-sample-app
  labels:
    app: httpbin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - secretName: httpbin-https-secret
      hosts:
        - httpbin.cluster-3.poc.yogendra.me
  rules:
    - host: httpbin.cluster-3.poc.yogendra.me
      http:
        paths:
          - backend:
              serviceName: httpbin
              servicePort: 80


---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dms-kong
  namespace: dms
  labels:
    app: dms
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
  
spec:
  tls:
    - secretName: epartner-ssl-cert
      hosts:
        - epartners.smart.com.ph
        - api.epartners.smart.com.ph
        - asset.epartners.smart.com.ph
    - secretName: eloadgw-ssl-cert
      hosts:
        - eloadgw.smart.com.ph
  rules:
    - host: api.epartners.smart.com.ph
      http:
        paths:
          - backend:
              serviceName: kong-app-svc
              servicePort: 80
    - host: epartners.smart.com.ph
      http:
        paths:
          - backend:
              serviceName: kong-app-svc
              servicePort: 80
    - host: asset.epartners.smart.com.ph
      http:
        paths:
          - backend:
              serviceName: kong-app-svc
              servicePort: 80
    - host: eloadgw.smart.com.ph
      http:
        paths:
          - backend:
              serviceName: kong-app-svc
              servicePort: 80

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dms-kong-http
  namespace: dms
  labels:
    app: dms
spec:
  rules:
    - host: api.epartners.smart.com.ph
      http:
        paths: 
          - path: /api/v1/retailers/verify-min
            backend:
              serviceName: kong-app-svc
              servicePort: 80


# CSR Requests
# Non Prod - DMS Non-Prod -> SAN: *.stg.dms.smartpldt.ph, *.dev.dms.smartpldt.ph
# PROD - DMS -> SAN: *.epartners.smart.com.ph
# PROD - DMS -> SAN: eloadgw.smart.com.ph
